# bqcli

./: pyproject.toml
bqcli/: __main__.py  config.py  metacmd.py
tests/: test_bqcli.py
